tests/baselines/reference/YieldExpression11_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression11_es6.ts(2,3): error TS1220: Generators are only available when targeting ECMAScript 2015 or higher.
tests/cases/conformance/es6/yieldExpressions/YieldExpression11_es6.ts(3,11): error TS2663: Cannot find name 'foo'. Did you mean the instance member 'this.foo'?


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression11_es6.ts (2 errors) ====
    class C {
      *foo() {
      ~
!!! error TS1220: Generators are only available when targeting ECMAScript 2015 or higher.
        yield(foo);
              ~~~
!!! error TS2663: Cannot find name 'foo'. Did you mean the instance member 'this.foo'?
      }
    }